--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -1,4 +1,7 @@
 .footer-container{
+    width:80%;
+    margin-top:10%;
+    margin-bottom: 10%;
     display:flex;
     flex-direction: column;
     align-items: center;
