--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -1,6 +1,7 @@
 @import '../css/Header.scss';
 @import '../css/Navbar.scss';
 @import '../css/Footer.scss';
+@import '../css/Skills.scss';
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Noto+Sans+KR:wght@300&family=Noto+Serif+KR&display=swap');
 
