--- a/src/css/Footer.scss
+++ b/src/css/Footer.scss
@@ -5,12 +5,20 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    font-family: 'Open Sans', sans-serif;
     .social-icons{
         margin-top: 20px;
         img{
             height:2rem;
             margin:10px;
+        }
+    }
+    .contact-infos{
+        margin-top: 20px;
+        color:gray;
+
+        .info-title{
+            font-weight: bold;
+            color:darkcyan
         }
     }
 }
