--- a/src/css/Navbar.scss
+++ b/src/css/Navbar.scss
@@ -5,15 +5,16 @@
     margin-top:10%;
     justify-content: space-between;
     align-items: center;
+    font-family: 'Noto Serif KR', serif;
     .nav-title{
         font-size: 40px;
-        font-family: 'Open Sans', sans-serif;
         font-weight: 500;
+        transition: all 0.3s ease-in-out;
         &:active{
-            color:#0064FF;
+            color:darkcyan;
         }
         .nav-title-char:hover{
-            color:#0064FF;
+            color:darkcyan;
         }
     }
     .nav-links{
@@ -23,13 +24,12 @@
             border:none;
             padding:10px;
             opacity: 0.6;
-            font-family: 'Noto Serif KR', serif;
             font-size: 25px;
-            transition: all 0.2s ease-in-out;
+            transition: all 0.3s ease-in-out;
             background-color: transparent;
-        
+            font-family: 'Noto Serif KR', serif;
             &:hover{
-                color:#0064FF;
+                color:darkcyan;
                 opacity: 1;
             }
         }
