--- a/src/css/Skills.scss
+++ b/src/css/Skills.scss
@@ -4,27 +4,54 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    font-family: 'Open Sans', sans-serif;
     h1{
+        font-family: 'Noto Serif KR', serif;
         font-size:3rem;
         line-height:20px;
     }
 
-    .skills-grid{
+    .skills-grid-major{
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        margin-top: 50px;
-        grid-gap:20px;
+        margin-bottom: 50px;
+        grid-gap:15px;
         
         .skill{
+            box-shadow: 0px 0px 5px 0.2px ;
             display: flex;
             flex-direction: column;
             align-items: center;
             text-align: center;
-            img{
-                height: 3rem;
-            }
+            background-color: darkcyan;
+            border-radius: .7rem;
             p{
-                font-size:14px;
+                color:white;
+                margin :10px;
+                font-size:20px;
+            }
+        }
+    }
+
+    .skills-grid-knowledges{
+        width: 50%;
+        display: flex;
+        margin-bottom: 50px;
+        grid-gap:15px;
+        flex-wrap:wrap;
+        justify-content: center;
+        .skill{
+            box-shadow: 0px 0px 5px 0.2px ;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            text-align: center;
+            background-color: darkcyan;
+            border-radius: .7rem;
+            p{
+                color:white;
+                margin :8px;
+                font-size:15px;
             }
         }
     }
