--- a/src/css/index.scss
+++ b/src/css/index.scss
@@ -2,13 +2,15 @@
 @import '../css/Navbar.scss';
 @import '../css/Footer.scss';
 @import '../css/Skills.scss';
+@import '../css/Projects.scss';
+@import '../css/Card.scss';
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@600&family=Noto+Sans+KR:wght@300&family=Noto+Serif+KR&display=swap');
 
 body{
     margin:0;
     padding:0;
-    font-family: 'Noto Serif KR', serif;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .section{
